@@ -21,6 +21,7 @@
 	- Store l10n preference in the database for logged-in users
 	- Bugfix: check for validness of form arguments on /[uv]+/votes
 	- Bugfix: translate screen resolutions on release revision pages
+	- Bugfix: properly escape search query in links query string
 	- Implemented permanent release/vn filters
 
 2.15 - 2010-12-15
